tests/baselines/reference/extendGlobalThis.errors.txt
index.ts(1,8): error TS2307: Cannot find module './extention' or its corresponding type declarations.


==== extension.d.ts (0 errors) ====
    declare global {
        namespace globalThis  {
            var test: string;
        }
    }
    
    export {}
    
==== index.ts (1 errors) ====
    import "./extention";
           ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './extention' or its corresponding type declarations.
    
    globalThis.tests = "a-b";
    console.log(globalThis.test.split("-"));
    